<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="79dp"
        android:layout_height="19dp"
        android:layout_marginBottom="44dp"
        android:text="@string/direccion2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/register_addres2"
        app:layout_constraintEnd_toEndOf="@+id/register_addres2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_addres2" />

    <EditText
        android:id="@+id/register_address1"
        android:layout_width="334dp"
        android:layout_height="44dp"
        android:background="@drawable/edit_textfield"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:textAlignment="center"
        android:textDirection="firstStrongLtr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <EditText
        android:id="@+id/register_addres2"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:background="@drawable/edit_textfield"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:textAlignment="center"
        android:textDirection="firstStrongLtr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="65dp"
        android:layout_height="19dp"
        android:layout_marginBottom="44dp"
        android:text="@string/direccion"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/register_address1"
        app:layout_constraintEnd_toEndOf="@+id/register_address1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_address1" />

    <Button
        android:id="@+id/atras"
        android:layout_width="99dp"
        android:layout_height="51dp"
        android:backgroundTint="#2962FF"
        android:drawableTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:text="Atras"
        android:textAllCaps="false"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="194dp"
        android:layout_height="45dp"
        android:backgroundTint="#2962FF"
        android:drawableTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:text="@string/registrar"
        android:textAllCaps="false"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="333dp"
        android:layout_height="44dp"
        android:background="@drawable/edit_textfield"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:textAlignment="center"
        android:textDirection="firstStrongLtr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="64dp"
        android:layout_height="19dp"
        android:layout_marginBottom="44dp"
        android:text="@string/nombre"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/register_name"
        app:layout_constraintEnd_toEndOf="@+id/register_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_name" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="333dp"
        android:layout_height="44dp"
        android:background="@drawable/edit_textfield"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        android:textAlignment="center"
        android:textDirection="firstStrongLtr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="73dp"
        android:layout_height="18dp"
        android:layout_marginBottom="44dp"
        android:text="@string/email"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/register_email"
        app:layout_constraintEnd_toEndOf="@+id/register_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_email"
        app:layout_constraintTop_toBottomOf="@+id/register_name"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/registrate_aqui"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/register_pc"
        android:layout_width="124dp"
        android:layout_height="39dp"
        android:background="@drawable/edit_textfield"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:padding="10sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/codigo_postal"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/register_pc"
        app:layout_constraintEnd_toEndOf="@+id/register_pc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_pc" />

    <EditText
        android:id="@+id/register_cpassword"
        android:layout_width="332dp"
        android:layout_height="44dp"
        android:background="@drawable/edit_textfield"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="158dp"
        android:layout_height="20dp"
        android:layout_marginBottom="44dp"
        android:text="@string/password_confirm"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/register_cpassword"
        app:layout_constraintEnd_toEndOf="@+id/register_cpassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_cpassword" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="333dp"
        android:layout_height="44dp"
        android:background="@drawable/edit_textfield"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="104dp"
        android:layout_height="18dp"
        android:layout_marginBottom="48dp"
        android:text="@string/password"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/register_password"
        app:layout_constraintEnd_toEndOf="@+id/register_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_password" />

    <Spinner
        android:id="@+id/register_state"
        android:layout_width="335dp"
        android:layout_height="44dp"
        android:background="@drawable/edit_textfield"
        android:textAlignment="center"
        android:textDirection="firstStrongLtr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <Spinner
        android:id="@+id/register_town"
        android:layout_width="335dp"
        android:layout_height="44dp"
        android:background="@drawable/edit_textfield"
        android:textAlignment="center"
        android:textDirection="firstStrongLtr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/estado"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/register_state"
        app:layout_constraintEnd_toEndOf="@+id/register_state"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_state" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/municipio"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/register_town"
        app:layout_constraintEnd_toEndOf="@+id/register_town"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_town" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="208dp"
        android:layout_height="43dp"
        android:background="@drawable/edit_textfield"
        android:ems="10"
        android:inputType="phone"
        android:padding="10sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/telefono"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/register_phone"
        app:layout_constraintEnd_toEndOf="@+id/register_phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>